syntax = "proto3";

package kafmesh.discovery.v1;

option csharp_namespace = "Kafmesh.Discovery.V1";
option go_package = "discoveryv1";
option java_multiple_files = true;
option java_outer_classname = "ViewSinkProto";
option java_package = "com.kafmesh.discovery.v1";
option objc_class_prefix = "KDX";

import "kafmesh/discovery/v1/topic_definition.proto";

// View sink is a kafmesh view sink.
message ViewSink {
  string name = 1;
  TopicDefinition topic = 2;
  string description = 3;
}
